RC 4
====

- Initial version of MicroKernel/Windsor fluent interface IOC-99

- Applied patch from Jacob Lewallen improving the locking performance in the DefaultNamingSubsystem under high load.

- Applied Philippe Tremblay's patch fixing IOC-94 
  "Copy LifeStyle from generic interface"

- Added support for copying interceptors defined on the geneirc interface handler.

- Fixed IOC-80
  "StartableFacility erroneously tries to start a component before
  RegisterCustomDependency can be called"

- Added ComponentModelConverter to utilize System.ComponentModel TypeConverters
  Very useful for converting things like Fonts and Colors

- Updated DefaultComplexConverter to support interfaces and derived types

- Fixed IOC-96
  "FactorySupport fails to create components if the factory instance is a proxy"

- Fixed IOC-93
  "GenericListConverter does not handle service overrides properly" 

- Fixed IOC-91
  "ContextBoundObject's context is not bound when object is created by MicroKernel"

- Fixed build from IContainerAccessor change

- Applied Ron Grabowski's patch fixing IOC-89
  "Make DefaultKernel implement IServiceProvider"

- Check for required Properties before determining the Handlers initial state

- Fixed IoC-87
  "DefaultComplextConverter does not properly handle nested components"

- Applied Lee Henson's patch fixing IOC-86
  "Additional generic AddComponent overloads"

- Applied Ido Samuelson patch fixing IOC-85
  "IKernel to support generics to add/resolve components."

- Refactored proxy options support. Now you can use the attribute 'marshalByRefProxy' 
  on the external configuration, or the ComponentProxyBehaviorAttribute

- Fixed IOC-79
  "Kernel.GetHandlers(Type) does not consider generic handlers when satisfying the type"

- Updated StartableFacilityTestCase to correctly demonstrate the facility and
  added a unit test to demonstrate IOC-80
 
- Applied Alex Henderson's patch that makes the ComponentModel available
  to the ILifestyleManager
