@@ -201,6 +201,13 @@ namespace Castle.Windsor
 		/// <summary>
 		/// Adds a component to be registered in the container using a fluent interface.
 		/// </summary>
+		/// <param name="serviceType">The service type.</param>
+		/// <returns>The <see cref="ComponentRegistration{S,T}"/></returns>
+		ComponentRegistration<IWindsorContainer> AddComponentEx(Type serviceType);
+
+		/// <summary>
+		/// Adds a component to be registered in the container using a fluent interface.
+		/// </summary>
 		/// <typeparam name="S">The <see cref="Type"/> to manage.</typeparam>
 		/// <returns>The <see cref="ComponentRegistration{S,T}"/></returns>
 		ComponentRegistration<S,IWindsorContainer> AddComponentEx<S>();
